tests/ui/did_you_mean/issue-41679-tilde-bitwise-negation-attempt.stderr
error: `~` cannot be used as a unary operator
  --> $DIR/issue-41679-tilde-bitwise-negation-attempt.rs:4:14
   |
LL |     let _x = ~1;
   |              ^
   |
help: use `!` to perform bitwise not
   |
LL -     let _x = ~1;
LL +     let _x = !1;
   |

error: aborting due to 1 previous error

